# atm

./: CONTRIBUTING.rst  README.md  conda-lock.yml  conda_lock_init_fix.py  footing.yaml  pyproject.toml  setup.cfg
atm/: __init__.py  cli.py  config.py  forcefield.py  system.py  utility.py  version.py
atm/template/: abfe_structprep.py  analyze.sh  atm_config.yaml  atom_abfe_template.cntl  atom_rbfe_template.cntl  diffnet_atm.py  rbfe_structprep.py  run_atm_template.sh  uwham_analysis.R  vis_template.pml  vmd_template.in  wrap_template.in
atm/tests/: test_config.py  test_forcefield.py  test_system.py  test_utility.py  test_version.py
atm/tests/data/001.prep/: Morph.in
atm/tests/data/001.prep/cofactors/GDP/: cofactor.frcmod  cofactor.mol2  cofactor.sdf
atm/tests/data/001.prep/ligands/Compd-0044102/: ligand.sdf
atm/tests/data/001.prep/ligands/Compd-0044699/: ligand.sdf
atm/tests/data/001.prep/ligands/Compd-0045010/: ligand.sdf
atm/tests/data/001.prep/ligands/core/: ligand.sdf
atm/tests/data/forcefield/Compd-0044102/: vacuum.frcmod  vacuum.mol2
atm/tests/data/forcefield/Compd-0044699/: vacuum.frcmod  vacuum.mol2
atm/tests/data/forcefield/Compd-0045010/: vacuum.frcmod  vacuum.mol2
dev/: activate  add-detail.sh  clean.py  deploy.py  docs.py  editable.py  footing-auto.sh  install.py  lint.py  lock.py  new.py  one-stage.sh  plugins.py  run.py  setup.py  spec.py  test.py  utils.py
dev/templates/: module.py  test_module.py
docs/: Makefile  conf.py  index.rst  installation.rst
